--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
 
     <h1>Odin Recipes</h1>
-    <ol><a href="recipes/carbonara.html">Carbonara</a></ol>
-    <ol><a href="recipes/mac-and-cheese.html">Mac & Cheese</a></ol>
-    <ol><a href="recipes/Nachos-Cheese.html">Nachos & Cheese</a></ol>
+    <ol><a href="./recipes/carbonara.html">Carbonara</a></ol>
+    <ol><a href="./recipes/mac-and-cheese.html">Mac & Cheese</a></ol>
+    <ol><a href="./recipes/Nachos-Cheese.html">Nachos & Cheese</a></ol>
 
 </body>
 </html>
