--- a/recipes/carbonara.html
+++ b/recipes/carbonara.html
@@ -37,5 +37,7 @@
     <ol>Add extra pasta cooking water to keep it saucy (several tablespoons should do it). You don’t want it wet, just moist. Season with a little salt, if needed.</ol>
     <ol>Use a long-pronged fork to twist the pasta on to the serving plate or bowl. Serve immediately with a little sprinkling of the remaining cheese and a grating of black pepper. If the dish does get a little dry before serving, splash in some more hot pasta water and the glossy sauciness will be revived.</ol>
 
+    <a href="#header">Return to top</a>
+
 </body>
 </html>
