--- a/recipes/Nachos-Cheese.html
+++ b/recipes/Nachos-Cheese.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="../styles.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,7 +10,7 @@
 <body>
     <h1>This is a great recipe for Nachos and Cheese</h1>
     <img src="images/NachosCheese.webp">
-    <p><b>Whip up these speedy nachos for a casual get-together with friends. Crispy tortilla chips are loaded with salsa, cheese, spring onions, chilli and other toppings.</b></p>
+    <p class="odd">Whip up these speedy nachos for a casual get-together with friends. Crispy tortilla chips are loaded with salsa, cheese, spring onions, chilli and other toppings.</p>
 
     <!--Ingredients-->
     <h1>Ingredients</h1>
