--- a/recipes/carbonara.html
+++ b/recipes/carbonara.html
@@ -5,12 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Carbonara Recipe</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
     <h1>Recipe for Carbonara</h1>
-    <img src="images/Espaguetis_carbonara.jpg">
+    <img src="images/Espaguetis_carbonara.jpg"
+        width="600"
+        height="400">
     <p><b>Discover how to make superb spaghetti carbonara. This cheesy pasta dish is an Italian favourite and with the right technique, you can make it perfect every time</b></p>
-
+<div class="fontchange">
     <!--Ingredients-->
     <h1>Ingredients</h1>
     <li>100g Pancetta</li>
@@ -21,6 +24,7 @@
     <li>2 Garlic Cloves</li>
     <li>50g Unslated Butter</li>
     <li>Sea Salt & Ground Black Pepper</li>
+</div>
 
 <!--The steps for the recipe-->
     <h1>Recipe</h1>
@@ -36,8 +40,6 @@
     <ol>Take the pan of spaghetti and pancetta off the heat. Now quickly pour in the eggs and cheese. Using the tongs or a long fork, lift up the spaghetti so it mixes easily with the egg mixture, which thickens but doesn’t scramble, and everything is coated.</ol>
     <ol>Add extra pasta cooking water to keep it saucy (several tablespoons should do it). You don’t want it wet, just moist. Season with a little salt, if needed.</ol>
     <ol>Use a long-pronged fork to twist the pasta on to the serving plate or bowl. Serve immediately with a little sprinkling of the remaining cheese and a grating of black pepper. If the dish does get a little dry before serving, splash in some more hot pasta water and the glossy sauciness will be revived.</ol>
-
-    <a href="#header">Return to top</a>
 
 </body>
 </html>
