--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,10 +9,14 @@
 </head>
 <body>
 
+
     <h1>Odin Recipes</h1>
     <ol><a href="./recipes/carbonara.html">Carbonara</a></ol>
     <ol><a href="./recipes/mac-and-cheese.html">Mac & Cheese</a></ol>
     <ol><a href="./recipes/Nachos-Cheese.html">Nachos & Cheese</a></ol>
+
+
+    <button style="background-color: green; color: white; font-weight: bold; font-size: 18px;">Carbonara</button>
 
 </body>
 </html>
