--- a/recipes/mac-and-cheese.html
+++ b/recipes/mac-and-cheese.html
@@ -5,20 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mac and Cheese Recipe</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
     <h1>Recipe For Creamy Mac and Cheese</h1>
-    <img src="images/Ultimate-Creamy-Baked-Mac-and-Cheese-baking-dish-680x959.webp">
+    <img src="images/Ultimate-Creamy-Baked-Mac-and-Cheese-baking-dish-680x959.webp"
+            width="400"
+            height="400">
     <p><b>This baked mac and cheese is a family favorite recipe, loved by both children and adults. It uses a combination of cheeses, layered in the dish as well as melted into a rich and creamy cheese sauce, for the ultimate in cheesy deliciousness!  Perfect for a comforting dinner or as a holiday side dish!</b></p>
 
+    <div>
     <!--Ingredients-->
     <h1>Ingredients</h1>
-    <li>Macaroni</li>
+    <li><dive>Macaroni</dive></li>
     <li>Chedder Cheese</li>
-    <li>Red Leicester Cheese</li>
+    <li><dive>Red Leicester Cheese</dive></li>
     <li>Butter</li>
-    <li>Milk</li>
+    <li><dive>Milk</dive></li>
     <li>Salt & Pepper</li>
+    </div>
 
     <!--Steps for Recipe-->
     <h1>Recipe</h1>
@@ -32,8 +37,6 @@
     <ol>Bake and prepare to thoroughly enjoy!</ol>
 
     <img src="images/Macandcheese2.webp\">
-
-    <a href="#header">Return to top</a>
 
 </body>
 </html>
